--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,208 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --primary: #eee7e1;
+  --secondary: #1a1919;
+  --tertiary: #e2c2b3;
+  --error: rgb(228, 46, 1);
+  --spacing-one: calc(1rem * 0.5);
+  --spacing-two: calc(1rem);
+  --spacing-five: calc(2.5rem);
+  --heading-font: 'Abril Fatface', Verdana, Geneva, Tahoma, sans-serif;
+  --text-font: 'Poppins', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+body {
+  font-family: var(--text-font);
+  color: var(--secondary-color);
+  background-color: var(--primary-color);
+  font-size: 16px;
+}
+
+.section-title {
+  font-size: 40px;
+  font-family: var(--heading-font);
+  border-bottom: 3px solid;
+  padding-bottom: 10px;
+  text-align: center;
+  margin: 20px auto 35px auto;
+  width: 25%;
+}
+
+/*Header section start*/
+header {
+  background-color: var(--secondary);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+  z-index: 99999;
+  padding: 8px;
+}
+
+header h1 {
+  font-size: 37px;
+  /* font-weight: normal; */
+  font-family: var(--heading-font);
+  flex: 2;
+}
+
+.header-name {
+  color: var(--primary);
+}
+
+header h1 a:link {
+  text-decoration: none;
+}
+
+header h1 a:hover {
+  font-weight: bold;
+}
+
+header nav {
+  font-family: var(--heading-font);
+  font-weight: normal;
+  flex: 1;
+}
+
+header nav ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  list-style: none;
+}
+
+header nav ul li {
+  font-weight: normal;
+  font-size: 37px;
+  border-bottom: 1px solid var(--primary);
+}
+
+header nav ul li:link {
+  transition: all 1000ms;
+}
+
+header nav ul li:hover {
+  border-bottom: none;
+  text-decoration: line-through;
+  font-size: 40px;
+  font-size-adjust: 20px;
+}
+
+header nav ul li a {
+  color: var(--primary);
+  text-decoration: none;
+}
+/*Header section end*/
+
+/*About section start*/
+.about-section {
+  padding-bottom: 20px;
+}
+
+.about-flex {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 20px;
+  width: 78%;
+  align-items: center;
+  margin: auto;
+}
+
+.about-flex .profile-img {
+  flex: 1;
+  margin-right: 20px;
+}
+
+.about-flex img {
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+  object-position: top;
+  border-radius: 50%;
+}
+
+.about-section .summary{
+  flex: 2;
+}
+
+.about-section .contact-button a {
+  color: var(--secondary);
+}
+
+.about-section .contact-button a:link {
+  text-decoration: none;
+  text-decoration: underline;
+}
+
+.about-section .contact-button a:hover {
+  text-decoration: none;
+  font-style: italic;
+}
+
+/*About section end*/
+
+/*Contact section start*/
+#contact-form p {
+  line-height: 1.5;
+  margin-bottom: 20px;
+}
+
+#contact-form p span {
+  font-style: italic;
+}
+
+#contact-form input, #contact-form textarea {
+  border: 1px solid;
+  display: block;
+  padding: 7px 15px;
+  font-size: 16px;
+  width: 60%;
+  margin-bottom: 15px;
+  margin-top: 5px;
+  border-radius: 10px;
+}
+
+#contact-form textarea {
+  height: 200px;
+  width: 60%;
+  padding: 7px 15x;
+  font-size: 18px;
+  margin-bottom: 15px;
+  margin-top: 5px;
+  border-radius: 10px;
+  box-sizing: border-box;
+  resize: none;
+  font-family: var(--text-font);
+}
+
+#contact-form form div input:focus, #contact-form form div textarea:focus {
+  /* outline: none; */
+  background-color: var(--tertiary);
+}
+
+#contact-form button {
+  width: 60%;
+  border: none;
+  background-color: var(--secondary);
+  color: var(--primary);
+  font-size: 20px;
+  padding: 15px;
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
+
+#contact-form button:hover {
+  color: var(--secondary);
+  background-color: var(--primary);
+  border: 1px solid var(--secondary);
+  cursor: pointer;
+}
+/*Contact section end*/
