--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,6 +12,64 @@
   box-sizing: border-box;
 }
 
+.banner { 
+  position: absolute; 
+  z-index: 9999; 
+  padding: .75rem 1.25rem; 
+  margin-bottom: 1rem; 
+  border: 1px solid transparent; 
+  border-radius: .25rem; 
+  /* display: none;  */
+} 
+
+.banner.active { 
+  display: block; 
+} 
+
+.banner-bottom { 
+  left: 0; 
+  right: 0; 
+  bottom: 10px; 
+} 
+
+.banner-top { 
+  left: 0; 
+  right: 0; 
+  top: 10px; 
+} 
+
+.banner-right { 
+  right: 10px; 
+  bottom: 10%; 
+  min-height: 10vh; 
+} 
+
+.banner-left { 
+  left: 10px; 
+  bottom: 10%; 
+  min-height: 10vh; 
+} 
+
+.alert-primary { 
+  color: #004085; 
+  background-color: #cce5ff; 
+  border-color: #b8daff; 
+} 
+
+.banner-close { 
+  position: absolute; 
+  right: 1.5%; 
+} 
+
+.banner-close:after { 
+  position: absolute; 
+  right: 0; 
+  top: 50%; 
+  content: 'X'; 
+  color: #69f; 
+} 
+
+
 body {
   font-family: var(--text-font);
   color: var(--secondary);
@@ -213,9 +271,9 @@ header nav ul li a:hover, header nav ul li a:focus {
 
 .cards-links {
   position: absolute;
-  top: 0;
+  bottom: 0;
   left: 0;
-  padding: 65px;
+  padding: 45px;
   font-family: var(--heading-font);
 }
 
